--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,10 @@
-cmake_minimum_required(VERSION 2.8.3)
-
-# Allow VERSION in the 'project'command
-cmake_policy(SET CMP0048 NEW)
-
-set(CMAKE_CXX_STANDARD 17)
-
+cmake_minimum_required(VERSION 3.0.0)
 project(yadi_dlms
         VERSION 0.0.1
         LANGUAGES CXX)
 
 add_subdirectory(test)
+add_subdirectory(demo)
 
 ## Sources
 set(yadi_SRC
@@ -17,40 +12,20 @@ set(yadi_SRC
     src/dlms.cpp
     src/emode.cpp
     src/hdlc.cpp
-    src/parser.cpp
+    src/dlms_type.cpp
     src/wrapper.cpp
     src/security.cpp)
 
 ## Add yadi library
 add_library(${PROJECT_NAME} STATIC ${yadi_SRC})
 
+target_link_libraries(yadi_dlms PUBLIC ssp)
+
 ## Include headers
-include_directories(include)
-
-## Install
-set(INSTALL_LIB_DIR lib)
-set(INSTALL_INCLUDE_DIR include)
-set(INSTALL_CMAKE_DIR share/serial/cmake)
-
-## Install executable
-install(TARGETS ${PROJECT_NAME}
-        DESTINATION ${INSTALL_LIB_DIR}
-        EXPORT ${PROJECT_NAME}-targets
-)
-
-## Install headers
-install(FILES   include/yadi/cosem.h
-                include/yadi/dlms.h
-                include/yadi/hdlc.h
-                include/yadi/link_layer.h
-                include/yadi/phy_layer.h
-                include/yadi/wrapper.h
-        DESTINATION ${INSTALL_INCLUDE_DIR}/yadi)
-
-## Install CMake files
-install(EXPORT ${PROJECT_NAME}-targets
-        DESTINATION ${INSTALL_CMAKE_DIR})
-
-install(FILES   ${CMAKE_SOURCE_DIR}/cmake/${PROJECT_NAME}Config.cmake 
-                ${CMAKE_SOURCE_DIR}/cmake/${PROJECT_NAME}ConfigVersion.cmake
-        DESTINATION ${INSTALL_CMAKE_DIR})
+target_include_directories(${PROJECT_NAME}
+        PUBLIC
+            $<INSTALL_INTERFACE:include>
+            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        PRIVATE
+            ${CMAKE_CURRENT_SOURCE_DIR}/src
+        )
