--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 cmake_policy(SET CMP0048 NEW)
-project(yadi_dlms_test
+project(yadi_test
         VERSION 0.0.1)
 
 ## Sources
@@ -15,7 +15,11 @@ set(yadi_test_SRC
         test_dlms_type.cpp
         test_cosem.cpp test_hdlc.cpp)
 
-include_directories(../include)
-
 ## Add yadi test target
 add_executable(${PROJECT_NAME} ${yadi_test_SRC})
+
+target_include_directories(${PROJECT_NAME} PRIVATE ../include)
+
+enable_testing()
+
+add_test(NAME Tests COMMAND yadi_test)
