--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -2,23 +2,17 @@ cmake_minimum_required(VERSION 3.8)
 
 project(yadi_demo VERSION 0.0.1)
 
-## Sources
-set(yadi_demo_SRC
+add_executable(
+        yadi_demo 
+
         main.cpp
-        ../src/cosem.cpp
-        ../src/emode.cpp
-        ../src/hdlc.cpp
-        ../src/wrapper.cpp
-        ../src/security.cpp
-        ../src/data_type.cpp
-        ../src/logical_name.cpp)
+        ../src/cosem_serializer.cpp
+        ../src/cosem_parser.cpp
+)
 
-# import library target 'ssp'
-find_package(ssp REQUIRED)
+target_include_directories(
+        yadi_demo
 
-## Include headers for test target
-include_directories(../include)
-
-## Add demo target
-add_executable(yadi_demo ${yadi_demo_SRC})
-target_link_libraries(yadi_demo PUBLIC ssp)
+        PRIVATE
+                ../include
+)
